--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,18 +1,13 @@
 pipeline {
-    agent {
-        docker {
-            image 'docker:latest'
-            args '-v /var/run/docker.sock:/var/run/docker.sock'
-        }
-    }
+    agent any
 
     environment {
-        IMAGE_NAME = 'ajayyadav1/jenkins-node-cicd'
-        DOCKER_CREDS_ID = 'dockerhub-credentials'
+        IMAGE_NAME = 'ajay12yadav/jenkins-node-cicd'
+        DOCKER_CREDS_ID = 'docker-hub-credentials'
     }
 
     stages {
-        stage('Checkout Code') {
+        stage('Checkout') {
             steps {
                 git 'https://github.com/Ajay12yadav/ci-cd-jenkins-docker.git'
             }
@@ -39,3 +34,4 @@ pipeline {
         }
     }
 }
+
